--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "redux-loop",
-  "version": "4.2.4",
+  "name": "@csssr/redux-loop",
+  "version": "4.2.5",
   "description": "Sequence your effects naturally and purely by returning them from your reducers.",
   "main": "lib/index.js",
   "module": "es/index.js",
